<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kayak.kayaktravel.AirlineDetailActivity">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/networkImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvAirlineName"
        android:text="@string/airline_detail_name"
        android:textSize="20sp"
        android:padding="10dp"
        android:ellipsize="marquee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:singleLine="false"
        android:layout_toRightOf="@+id/networkImageView"
        android:layout_toEndOf="@+id/networkImageView" />

    <TextView
        android:id="@+id/tvAirlineWebsite"
        android:text="@string/airline_detail_website"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_open_in_browser_black"
        android:drawableStart="@drawable/ic_open_in_browser_black"
        android:layout_below="@+id/tvAirlineName"
        android:autoLink="web"
        android:layout_toRightOf="@+id/networkImageView"
        android:layout_toEndOf="@+id/networkImageView"/>

    <TextView
        android:id="@+id/tvAirlinePhone"
        android:text="@string/airline_detail_phone"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_call"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:autoLink="phone"
        android:layout_below="@+id/tvAirlineWebsite"
        android:layout_toRightOf="@+id/networkImageView"
        android:layout_toEndOf="@+id/networkImageView"/>



</RelativeLayout>
