<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TravelHomeActivity">

    <RadioGroup
        android:id="@+id/rgSortList"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtnFav"
            android:text="@string/home_switch_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rbtnAll"
            android:text="@string/home_switch_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

    </RadioGroup>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvShowHelpfulHints"
        android:layout_below="@+id/rgSortList">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressLoading"
                android:layout_gravity="center"/>

            <ListView
                android:id="@+id/lvAirlineList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tvShowHelpfulHints"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/show_helpful_hints"
        android:textColor="@android:color/holo_blue_dark" />

</RelativeLayout>
